--- a/code/04_Model_Tuning_and_Predictions.ipynb
+++ b/code/04_Model_Tuning_and_Predictions.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Model Tuning"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### External LIbraries"
    ]
   },
@@ -451,9 +444,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dsi]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dsi-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
