--- a/code/01_Cleanup_EDA.ipynb
+++ b/code/01_Cleanup_EDA.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ames Housing Data and Kaggle Challenge"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Problem Statement"
    ]
   },
@@ -954,9 +947,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:dsi]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-dsi-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
